--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ flutter:
     - assets/images/d.png
     - assets/images/logo.png
     - assets/images/welcome.png
+    - assets/images/book.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
