--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/welcome.png
     - assets/images/book.jpg
+    - assets/images/auth.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
